src/components/TaskItem/TaskItem.module.css
.title {
  color: var(--secondary-color);
  word-break: break-word;
  overflow-wrap: anywhere;
  white-space: normal;
  flex: 1;

  cursor: pointer;
}

.completed {
  color: var(--completed-task);
  text-decoration: line-through;
}

.delete {
  display: flex;
  align-items: center;
  margin-left: auto;
  cursor: pointer;
}

.dragHandle {
  color: var(--secondary-color);
  font-size: var(--font-size-4);
  cursor: pointer;
}

@media (min-width: 768px) {
  .title {
    max-width: 400px;
  }
}

